--- a/course-details.html
+++ b/course-details.html
@@ -314,7 +314,7 @@
               <div class="bottom d-flex flex-row justify-content-between">
                 <div class="rating">
                   <h2>4.8</h2>
-                  <div>
+                  <div class="d-flex flex-row justify-content-center">
                     <img src="img/star.svg" alt="" style="width: 10px; height: 10px;">
                     <img src="img/star.svg" alt="" style="width: 10px; height: 10px;">
                     <img src="img/star.svg" alt="" style="width: 10px; height: 10px;">
@@ -323,8 +323,26 @@
                   </div>
                   <small>40 REVIEWS</small>
                 </div>
-                <img src="img/award-1.png" alt="">
-                <img src="img/award-2.png" alt="">
+                <div class="award d-flex flex-row">
+                    <img src="img/wing_left.svg" alt="" class="wing">
+                        <div class="award-text">
+                            <h1 class="award-title">Best Tutor</h1>
+                            <h2 class="award-name">Award Winning</h2>
+                            <h3 class="award-year">2021</h3>
+                        </div>
+                    <img src="img/wing_right.svg" alt="" class="wing">
+                </div>
+                <div class="award d-flex flex-row">
+                    <img src="img/wing_left.svg" alt="" class="wing">
+                        <div class="award-text">
+                            <h1 class="award-title">Best Tutor</h1>
+                            <h2 class="award-name">Creators Award</h2>
+                            <h3 class="award-year">2020</h3>
+                        </div>
+                    <img src="img/wing_right.svg" alt="" class="wing">
+                </div>
+                <!-- <img src="img/award-1.png" alt=""> -->
+                <!-- <img src="img/award-2.png" alt=""> -->
               </div>
             </div>
           </div>
