--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     </section>
 
     <section class="featured-section">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="container">
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -162,6 +163,7 @@
               </div>
             </div>
         </div>
+        </div>
         
     </section>
 
@@ -169,7 +171,7 @@
         <div class="expect-wrapper">
             <h1 class="expect-title">What to expect from our courses</h1>
             <div class="cards-wrapper">
-                <div class="card mb-3 card-1" style="max-width: 540px;">
+                <div class="card mb-3 card-1">
                     <div class="row g-0">
                       <div class="card-expect-img col-md-2 col-2">
                         <img src="img/smile.svg" class="img-fluid rounded-start" alt="smile-face">
@@ -184,7 +186,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="card mb-3 card-2" style="max-width: 540px;">
+                <div class="card mb-3 card-2">
                     <div class="row g-0">
                         <div class="card-expect-img col-md-2 col-2">
                           <img src="img/github.svg" class="img-fluid rounded-start" alt="smile-face">
@@ -199,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 card-3" style="max-width: 540px;">
+                <div class="card mb-3 card-3">
                     <div class="row g-0">
                       <div class="card-expect-img col-md-2 col-2">
                         <img src="img/screen.svg" class="img-fluid rounded-start" alt="smile-face">
@@ -214,7 +216,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="card mb-3 card-4" style="max-width: 540px;">
+                <div class="card mb-3 card-4">
                     <div class="row g-0">
                         <div class="card-expect-img col-md-2 col-2">
                           <img src="img/medal.svg" class="img-fluid rounded-start" alt="smile-face">
@@ -229,7 +231,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 card-5" style="max-width: 540px;">
+                <div class="card mb-3 card-5">
                     <div class="row g-0">
                       <div class="card-expect-img col-md-2 col-2">
                         <img src="img/like.svg" class="img-fluid rounded-start" alt="smile-face">
@@ -244,7 +246,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="card mb-3 card-6" style="max-width: 540px;">
+                <div class="card mb-3 card-6">
                     <div class="row g-0">
                         <div class="card-expect-img col-md-2 col-2">
                           <img src="img/shape.svg" class="img-fluid rounded-start" alt="smile-face">
